--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,14 +3,27 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/assets/css/reset.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Raleway:400,600" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Fontdiner+Swanky|Handlee|Shrikhand" rel="stylesheet">
     <title>LinkedIn Job Scraper</title>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/assets/js/logic.js"></script>
 </head>
 
 <body>
+{{!-- navbar --}}
+
+<div class="navbar">
+    <p class="logo">
+        <a href="/jobs">KSL Job Scraper</a>
+    </p>
+    <ul class="links">
+        <a href="/"><li>Home</li></a>
+        <a href="/jobs/saved"><li>Saved</li></a>
+        <a href="#####"><li>GitHub</li></a>
+    </ul>
+</div>
     {{{ body }}}
 </body>
 
