--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,1 +1,264 @@
+
+/* google font styels */
+/* font-family: 'Raleway',sans-serif; */
+/* font-family: 'Cinzel',serif; */
+
 /* Linked to main.handlebars */
+body {
+    font-size: 14px;
+    font-family: 'Raleway',sans-serif;
+    background-image: url(./../images/linedpaper/linedpaper_@2x.png);
+    background-size: auto;
+    background-position: center;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Cinzel',serif;
+}
+
+h1 {
+    font-size: 2.5rem;
+}
+h2 {
+    font-size: 2.25rem;
+}
+h3 {
+    font-size: 2.0rem;
+}
+h4 {
+    font-size: 1.75rem;
+}
+h5 {
+    font-size: 1.5rem;
+}
+h6 {
+    font-size: 1.25rem;
+}
+/* navbar */
+
+.navbar {
+    color: white;
+    background-color: black;
+    display: inline-flex;
+    flex-direction: row;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 115px;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.navbar .logo {
+     position: relative;
+     /* left: 0; */
+     margin: 3%;
+     font-size: 2rem;
+}
+
+.navbar .logo a {
+    text-decoration: none;
+    color: white;
+    font-size: 2rem;
+    
+}
+
+.navbar .links {
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    font-size: 2rem;
+    position: relative;
+    width: 50%;
+    margin: 3%;
+    color: white;
+    text-decoration: none;
+    /* right: 0; */
+}
+
+.navbar .links a{
+
+    color: white;
+    text-decoration: none;
+    /* right: 0; */
+}
+.navbar .links a:hover {
+    position: relative;
+    top: 2px;
+    left: 2px;
+    color: rgba(201, 201, 201, 0.913);
+    text-decoration: none;
+    /* right: 0; */
+}
+
+/* hero banner */
+.hero-head {
+    background-image: url(https://images.unsplash.com/photo-1418225162054-0f773a996f9e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=784227dbcdc8cde56487e3e5096bb2c6&auto=format&fit=crop&w=1958&q=80);
+    /*  background image found @@samuelzeller on Unsplash - https://unsplash.com/photos/_es6l-aPDA0 */
+    background-position: center;
+    background-size: cover;
+    border: 4px solid black;
+    box-sizing: border-box;
+    font-size: 4rem;
+    /* position: relative; */
+    margin-top: 115px;
+    height: 65vh;
+    text-align: center;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    justify-content: center;
+}
+
+.heading-styles {
+    color: purple;
+    text-shadow: 5px 2px 4px rgba(242, 247, 249, 1)
+}
+
+.scraper-button {
+    background: transparent;
+    border: 2px solid purple;
+    padding: 3px;
+    border-radius: 0;
+    color: purple;
+    font-size: 1.2rem;
+    text-shadow: 5px 2px 4px rgba(242, 247, 249, 1)
+}
+
+/* job search results containers */
+
+.positions-heading {
+    padding: 15px;
+    text-decoration: underline;
+}
+
+.job-results-container {
+    /* background-color: white; */
+    font-size: 1rem;
+    text-align: center;
+}
+
+.card-container {
+    background-color: rgba(147, 147, 147, 0.765);
+    border: 2px solid purple;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    margin: 10px auto;
+    justify-content: center;
+    align-items: center;
+}
+
+.job-cards-container {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        flex-flow: wrap;
+        flex-shrink: inherit;
+}
+
+/* individual job cards */
+.posting-card {
+    width: 75%;
+    margin: 10px auto;
+    line-height: 25px;
+    padding: 15px 0;
+    background-color: transparent;
+    /* border: 2px solid purple; */
+    border-radius: 5px;
+    color: white;
+    font-size: 1.0rem;
+    text-decoration: none;
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+
+}
+
+.posting-card-data-field {
+    display: inline-flex;
+    margin: 0 auto;
+}
+
+.posting-card-data-field p{
+    
+    margin: 0 5px;
+}
+
+.buttons-box{
+    display: flex;
+    flex-direction: row;
+}
+
+.delete-button {
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    /* background: transparent; */
+    /* border: 2px solid white; */
+    margin: 0 10px;
+    border-radius: 5px;
+    padding: 3px;
+    border-radius: 5;
+    background-color: red;
+    color: white;
+    font-size: 1.2rem;
+    /* text-shadow: 5px 2px 4px rgba(242, 247, 249, 1) */
+    -webkit-appearance: button-bevel;
+}
+
+.save-button {
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    /* background: transparent; */
+    /* border: 2px solid white; */
+    margin: 0 10px;
+    border-radius: 5px;
+    padding: 3px;
+    border-radius: 5;
+    background-color: green;
+    color: white;
+    font-size: 1.2rem;
+    /* text-shadow: 5px 2px 4px rgba(242, 247, 249, 1) */
+    
+}
+
+.note-button {
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    /* background: transparent; */
+    /* border: 2px solid white; */
+    margin: 0 10px;
+    border-radius: 5px;
+    padding: 3px;
+    border-radius: 5;
+    background-color: green;
+    color: white;
+    font-size: 1.2rem;
+    /* text-shadow: 5px 2px 4px rgba(242, 247, 249, 1) */
+    
+}
+
+.notes-section  {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+}
+
+.hidden {
+    display: none;
+}
+
+/*  Media queries mobile first approach */
+
+@media (max-width: 450px) {
+  
+}
