--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,11 +9,12 @@
     </div>
 
     <div class="job-search-buttons">
-        <a href="/jobs/new/fullStackDev"><button class="scraper-button">Full Stack Developer</button></a>
-        <a href="/jobs/new/frontEndDev"><button class="scraper-button">Front End Developer</button></a>
-        <a href="/jobs/new/backEndDev"><button class="scraper-button">Back End Developer</button></a>
-        <a href="/jobs/new/webDev"><button class="scraper-button">Web Developer</button></a>
-        <a href="/jobs/new/uIuXDev"><button class="scraper-button">UI/UX Developer</button></a>
+        <button class="scraper-button"><a href="/jobs/new/fullStackDev">Full Stack Developer</a></button>
+        {{!-- <a href="/jobs/new/fullStackDev"><button class="scraper-button">Full Stack Developer</button></a> --}}
+        <button class="scraper-button"><a href="/jobs/new/frontEndDev">Front End Developer</a></button>
+        <button class="scraper-button"><a href="/jobs/new/backEndDev">Back End Developer</a></button>
+        <button class="scraper-button"><a href="/jobs/new/webDev">Web Developer</a></button>
+        <button class="scraper-button"><a href="/jobs/new/uIuXDev">UI/UX Developer</a></button>
     </div>
 </div>
 
