--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -5,6 +5,22 @@
     </div>
 </div>
 
+<div class="notes-header">
+    <h2 class="saved-notes-header">Saved Notes</h2>
+    <div class="all-saved-notes-container">
+        {{#each postings}}
+            {{#if this.note}}
+                {{this.title}}
+                {{#each this.note}}
+                    {{ this.note.title}}
+                    {{ this.note.body}}
+                {{/each}}
+            {{/if}}
+        {{/each}}
+    </div>
+    <div class="add-new-note-container hidden" id="notes"></div>
+</div>
+
 <div class="job-results-container">
     <h2 class="positions-heading">Saved Positions</h2>
     <div class="job-cards-container">
