--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,8 +4,10 @@
 {{!-- hero/head image --}}
 <div class="hero-head">
     <div class="heading-styles">
-        <h1>It's Time to find you a job.</h1>
-        <h2>Welcome to the KSL Jobs website Scraper</h2>
+        <h1>KSL Jobs Scraper</h1>
+        <h2>We help you find you a job!</h2>
+        <p>Click on the button below for the job you would like to scrape.</p>
+        <p>Then refresh the page.</p>
     </div>
 
     <div class="job-search-buttons">
