--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
     <ul class="links">
         <a href="/"><li>Home</li></a>
         <a href="/jobs/saved"><li>Saved</li></a>
-        <a href="#####"><li>GitHub</li></a>
+        <a href="https://github.com/nick-d-brown/ksl-jobs-scraper" target="_blank"><li>GitHub</li></a>
     </ul>
 </div>
     {{{ body }}}
