--- a/views/partials/jobs/job-block.handlebars
+++ b/views/partials/jobs/job-block.handlebars
@@ -6,13 +6,13 @@
             <p>{{this.title}}</p>
         </div>
         <div class="posting-card-data-field">
-            <p>Job Title: </p>
+            <p>Job Link: </p>
             <p>
-                <a href="https://www.ksl.com{{this.link}}">Job Link</a>
+                <a href="https://www.ksl.com{{this.link}}">https://www.ksl.com{{this.link}}</a>
             </p>
         </div>
         <div class="posting-card-data-field">
-            <p>Cmpany Name: </p>
+            <p>Company Name: </p>
             <p>{{this.compName}}</p>
         </div>
         <div class="posting-card-data-field">
